@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-19T16:16:07Z",
+  "timestamp" : "2022-07-20T08:13:30Z",
   "count_outdated" : 427,
   "uniques_outdated" : 31,
-  "count" : 442,
-  "uniques" : 37,
+  "count" : 443,
+  "uniques" : 38,
   "views" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
@@ -42,6 +42,13 @@
     },
     {
       "timestamp": "2022-07-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
