@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 2,
   "views": [
     {
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2022-07-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
